-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.4.0, Lustre 2.1.3
-
VirtualBox 4.2.6 VM
CentOS 6.3 x86_64
Kernel 2.6.32-279.2.1.el6_lustre.gc46c389.x86_64
Lustre Version: 2.1.3
-
3
-
6053
On execution of obdfilter-survey with rszlo="2048" and rszhi="2048" (non-default params) against a single OST, an LBUG is generated:
LustreError: 3202:0:(filter_io_26.c:297:filter_iobuf_add_page()) ASSERTION( iobuf->dr_npages < iobuf->dr_max_pages ) failed:
LustreError: 3202:0:(filter_io_26.c:297:filter_iobuf_add_page()) LBUG
LustreError: 3203:0:(filter_io_26.c:297:filter_iobuf_add_page()) ASSERTION( iobuf->dr_npages < iobuf->dr_max_pages ) failed:
LustreError: 3203:0:(filter_io_26.c:297:filter_iobuf_add_page()) LBUG
Kernel panic - not syncing: LBUG
Pid: 3202, comm: lctl Not tainted 2.6.32-279.2.1.el6_lustre.gc46c389.x86_64 #1
Call Trace:
[<ffffffff814fd57a>] ? panic+0xa0/0x168
[<ffffffffa0508e5b>] ? lbug_with_loc+0x9b/0xb0 [libcfs]
[<ffffffffa0bef472>] ? filter_iobuf_add_page+0x62/0x70 [obdfilter]
[<ffffffffa0bf2762>] ? filter_commitrw_write+0xa62/0x2e78 [obdfilter]
[<ffffffff8112b690>] ? __lru_cache_add+0x40/0x90
[<ffffffffa0be6fa7>] ? filter_preprw_write+0xc87/0x1cd0 [obdfilter]
[<ffffffff81162710>] ? cache_alloc_refill+0x1c0/0x240
[<ffffffffa0be6252>] ? filter_commitrw+0x272/0x290 [obdfilter]
[<ffffffffa0be8d88>] ? filter_preprw+0x68/0x80 [obdfilter]
[<ffffffffa0be919e>] ? filter_brw+0x3fe/0x740 [obdfilter]
[<ffffffffa0a80f8d>] ? echo_client_kbrw+0xd6d/0x1a50 [obdecho]
[<ffffffffa0517894>] ? cfs_hash_dual_bd_unlock+0x34/0x60 [libcfs]
[<ffffffffa051b0c2>] ? cfs_hash_del+0xa2/0x1d0 [libcfs]
[<ffffffffa0a827d7>] ? echo_client_brw_ioctl+0x1f7/0x1380 [obdecho]
[<ffffffff81212e39>] ? security_capable+0x29/0x30
[<ffffffffa0a86f38>] ? echo_client_iocontrol+0x638/0x1d00 [obdecho]
[<ffffffffa050819b>] ? cfs_set_ptldebug_header+0x2b/0xc0 [libcfs]
[<ffffffffa0509993>] ? cfs_alloc+0x63/0x90 [libcfs]
[<ffffffffa05c4cfa>] ? obd_ioctl_getdata+0x13a/0x1160 [obdclass]
[<ffffffffa05d83cf>] ? class_handle_ioctl+0x12ff/0x1ed0 [obdclass]
[<ffffffff8113ff34>] ? handle_mm_fault+0x1e4/0x2b0
[<ffffffffa05c42ab>] ? obd_class_ioctl+0x4b/0x190 [obdclass]
[<ffffffff8118dff2>] ? vfs_ioctl+0x22/0xa0
[<ffffffff81500a85>] ? page_fault+0x25/0x30
[<ffffffff8118e194>] ? do_vfs_ioctl+0x84/0x580
[<ffffffff8118e711>] ? sys_ioctl+0x81/0xa0
[<ffffffff8100b0f2>] ? system_call_fastpath+0x16/0x1b
The LBUG is consistent and reproducible on my test VM cluster using this command-line for obdfilter-survey:
size="512" rszlo="2048" rszhi="2048" nobjlo="2" thrlo="2" nobjhi="32" thrhi="32" case="disk" rslt_loc="/root/obdres" obdfilter-survey
- is related to
-
LU-1431 Support for larger than 1MB sequential I/O RPCs
-
- Resolved
-