LU-2598 tests: check npages in filter_preprw()

This patch checks the number of bulk I/O RPC pages with
PTLRPC_MAX_BRW_PAGES in filter_preprw() to avoid
LASSERT(iobuf->dr_npages < iobuf->dr_max_pages) occurring
while larger I/O size is specified.

Signed-off-by: Jian Yu <jian.yu@intel.com>
Change-Id: I1b85866045d753359c420ed9dfd8703eec14f18e
Reviewed-on: http://review.whamcloud.com/5715
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Bobi Jam <bobijam@gmail.com>